# python-project-poetry-template

./: .dockerignore  .envrc  .gitignore  .mdlrc  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LAST_CHANGES.md  MAINTAINERS.md  README.md  RELEASE.md  TOTO.md  Taskfile.yml  VERSION_NOTES.md  VERSION_NOTES.md.md  index.html  objects.inv  pyproject.toml  versions.json
.github/: Taskfile.yml
.github/workflows/: _install.yaml  release.yml  release_stable.yml  test.yaml
api/api_doc/: index.html
api_doc/: index.html
best_practices/: index.html
ci/: release_version.sh
conventions/: index.html
docker/: Dockerfile.build  Dockerfile.build-root  Dockerfile.dev  Dockerfile.prod  Taskfile.yml
docs/: Taskfile.yml  docker-compose.yaml  mkdocs.yml
docs/docker/: docker-compose.yaml
docs/src/: api_doc.md  best_practices.md  conventions.md  index.md
docs/src/guide/: conventions.md  tooling.md
guide/best_practices/: index.html
guide/conventions/: index.html
guide/tooling/: index.html
myprj/: __version__.py  cli.py
scripts/: Taskfile.yml  enable_completion.sh  publish_github.sh  release.sh  versions.sh
search/: search_index.json
tests/: test_ci_tools.bats  test_prj.py
v0.0/: 404.html
v0.0/search/: search_index.json
v0.11/: index.html
v0.11/api/api_doc/: index.html
v0.11/guide/tooling/: index.html
v0.12/: 404.html  index.html
v0.12/guide/best_practices/: index.html
v0.12/guide/tooling/: index.html
v0.13/: 404.html  index.html
v0.13/api/api_doc/: index.html
v0.13/guide/best_practices/: index.html
v0.13/guide/conventions/: index.html
v0.13/guide/tooling/: index.html
v0.13/search/: search_index.json
v0.14/: index.html
v0.14/guide/best_practices/: index.html
v0.14/guide/conventions/: index.html
v0.14/search/: search_index.json
