[tool.poetry]
name = "python-project-poetry-template"
version = "0.1.4"
description = "Python Project Poetry Template"
authors = ["mrjk"]
license = "GPLv3"

packages = [
    { include = "myprj"}
]
[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.32.2"


[tool.poetry_bumpversion.file."myprj/__version__.py"]


[tool.poetry.scripts]
myprj = "myprj.cli:cli"


[tool.semantic_release]
version_variable = [
    "myprj/__version__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = false
build_command = "poetry build"


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
poetry-bumpversion = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
