[tool.poetry]
name = "python-project-poetry-template"
version = "0.0.11"
description = "Python Project Poetry Template"
authors = ["mrjk"]
license = "GPLv3"

packages = [
    { include = "myprj"}
]
[tool.poetry.group.dev.dependencies]
python-semantic-release = "^7.32.2"


[tool.poetry_bumpversion.file."myprj/__version__.py"]


[tool.poetry.scripts]
myprj = "myprj.cli:cli"


[tool.semantic_release]
version_source = "commit"
version_variable = [
    "myprj/__version__.py:__version__",
#    "pyproject.toml:version"
]
version_toml = [
    'pyproject.toml:tool.poetry.version',
  ]
branch = "main"
major_on_zero = true

# Do not create tag so far !
# -----
commit_version_number = true
# PAttern that will be looked up in all commit that bumped things
commit_subject = "bump: version v{version}"
commit_message = "semantic-release new version: version {version}"
#commit_author = 

# pipeline hooks
# pre_commit_command = "poetry build"
# pre_commit_command = 
include_additional_files = 'dist/RELEASE.md'

tag_commit = true
tag_format = "v{version}"

# Build
changelog_file = "CHANGELOG.md"
dist_path = 'dist/'
build_command = 'poetry build'
# build_command = "pip install poetry && poetry build"

# Publish to github
# Require: export GH_TOKEN=
upload_to_release = false

# Require: PYPI_TOKEN REPOSITORY_USERNAME PYPI_USERNAME PYPI_PASSWORD
upload_to_pypi = false

# See: https://python-semantic-release.readthedocs.io/en/latest/automatic-releases/github-actions.html


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
poetry-bumpversion = "0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
