[tool.poetry]
name = "python-project-poetry-template"
version = "0.9.0-beta.6"
description = "Python Project Poetry Template"
authors = ["mrjk"]
license = "GPLv3"

packages = [
    { include = "myprj"}
]
[tool.poetry.group.dev.dependencies]
# Need to use: https://github.com/mrjk/python-semantic-release for <=7.32.2
python-semantic-release = "^7.32.2"
poetry = "^1.2.2"


# [tool.poetry_bumpversion.file."myprj/__version__.py"]
pytest = "^7.2.0"


[tool.poetry.scripts]
myprj = "myprj.cli:cli"


[tool.semantic_release]
version_source = "commit"
#version_source = "tag"
version_variable = [
    "myprj/__version__.py:^__version__",
#    "pyproject.toml:^version ?= ?"
]
version_toml = [
    'pyproject.toml:tool.poetry.version',
  ]
branch = "main"
major_on_zero = true

# Do not create tag so far !
# -----
commit_version_number = true
# PAttern that will be looked up in all commit that bumped things
commit_subject = "bump: version v{version}"
commit_message = "semantic-release new version: version {version}"
#commit_author =

# pipeline hooks
pre_commit_command = "task build_changelog"
# pre_commit_command =
include_additional_files = 'dist/RELEASE.md'

tag_commit = false
tag_format = "v{version}"

# Build
commit_parser = 'semantic_release.history.angular_parser'
#commit_parser = 'semantic_release.history.scipy_parser'
changelog_file = "CHANGELOG.md"
# build_command = "pip install poetry && poetry build"

# Run build ?
#build_command = 'poetry build'
build_command = 'poetry build'
dist_path = 'dist/'
#remove_dist = false
upload_to_release = true

# Publish to github
# Require: export GH_TOKEN=
upload_to_repository = true

# Publish to Pypi
# Require: PYPI_TOKEN REPOSITORY_USERNAME PYPI_USERNAME PYPI_PASSWORD
upload_to_pypi = false

# See: https://python-semantic-release.readthedocs.io/en/latest/automatic-releases/github-actions.html


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.0"
mkdocs-material = "^8.5.6"
mkdocs-schema-reader = "^0.11.1"
mkdocs-jupyter = "^0.22.0"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-literate-nav = "^0.5.0"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
commitizen = "^2.37.0"
#poetry-bumpversion = "0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
